Add logo and favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="script.js" defer></script>
   <title>Currency Converter</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="logo.svg" type="image/svg+xml">
 </head>
 <body>
 
